--- a/vignettes/oncocytomas.Rmd
+++ b/vignettes/oncocytomas.Rmd
@@ -72,6 +72,7 @@ _O_ncocytoma and _N_ormal _K_idney _S_amples from the same patients.
 We'd like to compute the relative mitochondrial copy number for each:
 
 ```{r computeCN}
+library(MTseeker)
 library(MTseekerData)
 data(RONKSreads, package="MTseekerData")
 mVn <- Summary(RONKSreads)$mitoVsNuclear
